Corrections for gitlab.tex.

--- a/collaboration/Gitlab.tex
+++ b/collaboration/Gitlab.tex
@@ -1,16 +1,15 @@
 \section{GitLab}
-From the aSTEP meeting that toke place 17.02.2016 it was decided that a few people across the groups should take responsibility for maintaining the gitlab server. Two members of our group volunteered for this task. The section purpose is to describe the work that our group has done related to GitLab.
+From the aSTEP meeting that took place 17.02.2016 it was decided that a few people across the groups should take responsibility for maintaining the GitLab server. Two members of this group volunteered for the task. The following sections purpose is to describe the work that we have done related to GitLab.
 
-Our first task is to update the GitLab that is running on semesters virtual server, this will from now on be refereed to as aSTEP server. The magnitude of this task involves installing a virtual server on one of our groups computer to emulate the GitLab update to ensure that if it fails to update, it will not course any problems to the aSTEP server running GitLab.
+\subsection{GitLab Update}
+Our first task is to update the GitLab that is running on the semester's virtual server, this will from now on be refereed to as the aSTEP server. The magnitude of this task involves installing a virtual server on one of our computer to emulate the GitLab update to ensure that if it fails, it will not cause any problems to the aSTEP server which is running the actual GitLab service. The program VirtualBox\cite{vbox} was used to emulate an Ubuntu Server operation system, where the GitLab service was installed. PuTTY\cite{putty}  is a program that allows us to connect and communicate with aStep.
 
-Installing GitLab is a bit more difficult then first anticipated, this were caused because GitLab run on a 64-bit architecture and the software VirtualBox only showed the option for installing 32-bit system. A solution was found that involves change the following setting on our machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS), afterwards you need to disable Hyper-V in Windows Features and after the machine have restarted and updated the setting VirtualBox will now show the option for 64-bit.
+The installation process has a architectural conflict as GitLab runs on a 64-bit architecture and the standard configuration of VirtualBox on the test machine only shows the option for installing 32-bit system. This is problematic as the update will fail if the version is 32-bit. It is possible to allow the 64-bit option to be displayed by changing the following setting on the test machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS). Then disable Hyper-V in Windows Features, restart the machine and updated the setting. VirtualBox will now show the option for 64-bit.
 
-The next step in this process is to install GitLab, we used the guide from GitLab own website\cite{gitlab_guide}, this had no major complications.
+GitLab is now ready to be installed on the test machine by following the guide from GitLab's website\cite{gitlab_guide}.
 
-Third step is to restore the backup create from the aSTEP server, this gave some complications, but mainly duo to the inexperience working with a ubuntu-server. To extract the backup from the aSTEP server and upload it to the testing server we used sub program of PuTTY called pscp, this allow us to extract and upload file to a machine.
+In order to test the update a backup must be extracted from the aSTEP server. To extract the backup and upload it to the testing server a sub program of PuTTY, called pscp, will be used. This allows the extraction from the aStep server and the uploading of files to the test machine.
 
-The last step is to update the GitLab with the new version of GitLab, this was surprisingly easy and GitLab have made a lot of measures to ensure that GitLab server will not lose data even if the update fails. This is done by automatic creating a backup before installing and detailed description if anything went wrong, and solutions to fix it.
+When the backup is extracted the next step is then to update the GitLab with the new version. The GitLab developers have incorporated some measures to ensure that GitLab servers will not lose data even if an update fails. This is done by automatic creating a backup before installing and detailing the process in a log if anything went wrong together with a set of solutions to the possible problems.
 
-After this was done a wiki page was created that would help future semesters in updating gitlab if necessary, the whole process of setting up af virtual test server will not be descried because it would not be necessary when GitLab have the fail safe measures.
-
-
+After this was done a Wiki page was created in the shared GitLab Wiki that would help future semesters in updating GitLab if necessary. The whole process of setting up af virtual test server will not be descried in the Wiki. We deemed it would not be necessary when GitLab have the fail safe measures.
