Fixed missing '}' in bib.bib

--- a/bib.bib
+++ b/bib.bib
@@ -1,4 +1,4 @@
-﻿@article{indoor_bin,
+@article{indoor_bin,
   title={Indoor-A New Data Management Frontier.},
   author={Jensen, Christian S and Lu, Hua and Yang, Bin},
   journal={IEEE Data Eng. Bull.},
@@ -219,5 +219,5 @@
 	author = {PuTTY},
 	title = {PuTTY Download Page},
 	note = {Accessed 8-3-2016},
-	url = {\url{http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}
+	url = {\url{http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}}
 }
