corrected fix-me names

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -1,7 +1,7 @@
 \section{System for Monitoring Mobile Devices}\label{sec:monitoring}\sfx{new name}
 When monitoring electronic devices in indoor spaces, a set of obstacles are presented. Some of the popular techniques used in outdoor environments prove themselves obsolete or severely hindered when applied in an indoor environment. \sfx{source (Cant find it ask Anders - Oliver)} This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement. As a consequence we need to explore specialized methods for determining positions in indoor spaces.
 
-In this section we will describe different approaches for indoor positioning and monitoring of mobile devices, and systems using these. Two systems will be described for indoor positioning, namely Google Indoor Maps and Cisco MSE.
+In this section we will describe different approaches for indoor positioning and monitoring of mobile devices, and explore systems using these.
 
 \subsection{Tracking Approach}\label{sec:tracking_approach}
 WI-FI, Bluetooth and Radio-Frequency Identification (RFID) are amongst the most popular technologies used for indoor positioning. When using these technologies there are multiple approaches for determining a users position. In this section we will examine some of these approaches.
@@ -13,7 +13,7 @@ Tracking approaches are typically mapped into four categories\cite{tracking_appr
 \item Angle of Arrival
 \item Location Patterning
 \end{itemize}
-Despite the division, many approaches combine categories to increase the location precision. We will take a look at an approach from each category.
+Despite the division, many advanced approaches combine categories to increase the location precision. We will take a look at an approach from each category.
 
 \subsubsection*{Cell of Origin}
 Approaches categorized under cell of origin are among the simplest techniques for positioning. These approaches aim to position mobile devices in cells, either defined by the reach of access points, or defined by rooms in a building.
