--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -333,16 +333,16 @@
 
 %%%% Personlige FixMes %%%%
 \newcommand{\ofx}[1]{
-\fxnote{Oliver aka the sv guy: #1}
+\fxnote{Oliver: #1}
 }
 \newcommand{\jfx}[1]{
-\fxnote{Jacob aka master of awesome: #1}
+\fxnote{Jacob: #1}
 }
 \newcommand{\afx}[1]{
-\fxnote{Anders aka karl-koder: #1}
+\fxnote{Anders: #1}
 }
 \newcommand{\sfx}[1]{
-\fxnote{Simon aka BOB: #1}
+\fxnote{Simon: #1}
 }
 
 % ¤¤ Specielle tegn ¤¤ %
