--- a/collaboration/Gitlab.tex
+++ b/collaboration/Gitlab.tex
@@ -1,10 +1,10 @@
 \section{GitLab}
-From the aSTEP meeting that took place 17.02.2016 it was decided that a few people across the groups should take responsibility for maintaining the GitLab server. Two members of this group volunteered for the task. The following sections purpose is to describe the work that we have done related to GitLab.
+From the aSTEP meeting that took place 17.02.2016 it was decided that a few people across the groups should take responsibility for maintaining the GitLab server, to ensure that GitLab is running optimal and without any problems for all the other groups of aSTEP. Two members of this group volunteered for the task. The following sections purpose is to describe the work that we have done related to GitLab. Slack is used to communicate within the GitLab group, tasks will be assigned through slack. \jfx{This may needed to be updated further when we have some more concrete guideline within GitLab}
 
 \subsection{GitLab Update}
 Our first task is to update the GitLab that is running on the semester's virtual server, this will from now on be refereed to as the aSTEP server. The magnitude of this task involves installing a virtual server on one of our computer to emulate the GitLab update to ensure that if it fails, it will not cause any problems to the aSTEP server which is running the actual GitLab service. The program VirtualBox\cite{vbox} was used to emulate an Ubuntu Server operation system, where the GitLab service was installed. PuTTY\cite{putty}  is a program that allows us to connect and communicate with aStep.
 
-The installation process has a architectural conflict as GitLab runs on a 64-bit architecture and the standard configuration of VirtualBox on the test machine only shows the option for installing 32-bit system. This is problematic as the update will fail if the version is 32-bit. It is possible to allow the 64-bit option to be displayed by changing the following setting on the test machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS). Then disable Hyper-V in Windows Features, restart the machine and updated the setting. VirtualBox will now show the option for 64-bit.
+The installation process has a architectural conflict as GitLab runs on a 64-bit architecture and the standard configuration of VirtualBox on the test machine only shows the option for installing 32-bit system. This is problematic as the update will fail if the version is 32-bit. It is possible to allow the 64-bit option to be displayed by changing the following setting on the test machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS). Then disable Hyper-V in Windows Features, restart the machine and updated the setting. VirtualBox will now show the option for 64-bit. 
 
 GitLab is now ready to be installed on the test machine by following the guide from GitLab's website\cite{gitlab_guide}.
 
