--- a/rapport.tex
+++ b/rapport.tex
@@ -35,6 +35,9 @@
 %%%% EXPERIENCE %%%%
 \include{experience/experience}
 
+%%%% FUTURE WORK %%%%
+\include{future_work/future_work}
+
 
 %%%% Appendiks %%%%
 \appendix														% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
