--- a/1sprint/security.tex
+++ b/1sprint/security.tex
@@ -1,18 +1,19 @@
 \section{security}
 The security aspect when working with the Cisco system will be minimized, because the security is not our main focus. This section will describe the requirements from working with sensitive data related to the Cisco system and how we handle these requirements.
 
-The administrator for the Cisco system will only allow us to retrieve data, if we obfuscate the MAC-addresses and other sensitive data, the main reason for this is so it will not be possible to single out a specific person, they also required that username and password would be necessary in order to establish that only us get access to it. 
+The administrator for the Cisco system will only allow us to retrieve data, if we obfuscate the MAC-addresses and other sensitive data like email addresses, to protect personal data and prevent singling out a specific person without there permission. They also required that username and password would be necessary in order to establish connection. 
 
 \subsection{Obfuscate MAC-Addresses}
-There are several alternatives to obfuscate the MAC-address, we need a solution that allow us to still track the obfuscated MAC-address, this is done to not limit the capabilities of aSTEP indoor location based service. The alternatives that will be explored in this section is hashing or translating the MAC-addresses.
+There are several alternatives to obfuscate the MAC-address, we need a solution that allow us to still track the obfuscated MAC-address, this is done to not limit the capabilities of aSTEP indoor location based service. Our approach is to simply remove the last 4 digits of the MAC-address, the only exception is if user have agreed to let us save their MAC-address.
+This is a simple solution that make sure the server does not store any sensitive data with the users accept. Long term goal for the aSTEP project is to incorporate security, so MAC-addresses is not stored in plain text, to raise security of the super project. This can also be seen in chapter \ref{Cha:Future_Work} about future work. 
 
-\subsubsection{Hashing}
-Hashing the MAC-address is a solution, the problem with that is the hash function takes an input and output into a fixed table, this can make two MAC-addresses share the same entry in the table, this can be fixed by expanding the hash function to cover all possible combinations of MAC-addresses and then eliminating the chance of two MAC-addresses have the same entry. This will make the table larger compared to the option were two MAC-addresses could have the same entry
+%\subsubsection{Hashing}
+%Hashing the MAC-address is a solution, the problem with that is the hash function takes an input and output into a fixed table, this can make two MAC-addresses share the same entry in the table, this can be fixed by expanding the hash function to cover all possible combinations of MAC-addresses and then eliminating the chance of two MAC-addresses have the same entry. This will make the table larger compared to the option were two MAC-addresses could have the same entry
 
-\subsubsection{Translating}
-A simpler approach that we suggested to the administrator of Cisco, is changing the last four digits of the MAC-address and replacing them with a counter, this will make it impossible to know which MAC-address corresponds to the real address. This was approved by the administrator.
+%\subsubsection{Translating}
+%A simpler approach that we suggested to the administrator of Cisco, is changing the last four digits of the MAC-address and replacing them with a counter, this will make it impossible to know which MAC-address corresponds to the real address. This was approved by the administrator.
 
-Hashing is a good option but more complex then simply translating the addresses, translations of MAC-address will be our chose over hashing.
+%Hashing is a good option but more complex then simply translating the addresses, translations of MAC-address will be our chose over hashing.
 
 
 %\subsection{Encryption}
